log
Wed May  4 14:52:39 HSP 2022: 
 heap.c | 8 +++++++-
 1 file changed, 7 insertions(+), 1 deletion(-)
 tests:  1|3
total_score: 10/70
5d7eb8a
Wed May  4 14:55:41 HSP 2022: 
 heap.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
 tests:  1|3
total_score: 10/70
fb8e924
Wed May  4 14:56:36 HSP 2022: 
 heap.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  1|3
total_score: 10/70
e125273
Wed May  4 14:57:20 HSP 2022: 
 heap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  2|2
total_score: 20/70
d29f406
ju.,  5 de may. de 2022 11:25:35: 
 tests:  2|2
total_score: 20/70
3bd6b08
ju.,  5 de may. de 2022 11:26:24: 
 heap.c | 10 ++++++++++
 1 file changed, 10 insertions(+)
 tests:  3|2
total_score: 25/70
761746a
ju.,  5 de may. de 2022 11:45:12: 
 heap.c | 13 ++++++++++++-
 1 file changed, 12 insertions(+), 1 deletion(-)
 tests:  3|2
total_score: 25/70
9f2f4cf
ju.,  5 de may. de 2022 11:48:56: 
 heap.c | 7 ++++++-
 1 file changed, 6 insertions(+), 1 deletion(-)
 tests:  4|2
total_score: 30/70
f48b4e2
ju.,  5 de may. de 2022 11:54:12: 
 heap.c | 9 +++++++--
 1 file changed, 7 insertions(+), 2 deletions(-)
 tests:  4|2
total_score: 30/70
e631ce0
ju.,  5 de may. de 2022 11:55:06: 
 heap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  7|1
total_score: 45/70
ef66c84
Sat May  7 13:22:45 HSP 2022: 
 tests:  7|1
total_score: 45/70
98d0742
Sat May  7 19:56:14 HSP 2022: 
 heap.c | 32 ++++++++++++++++++++++++++++++--
 1 file changed, 30 insertions(+), 2 deletions(-)
 tests:  7|1
total_score: 50/70
e78a8ee
Sat May  7 20:02:21 HSP 2022: 
 heap.c | 8 +++++++-
 1 file changed, 7 insertions(+), 1 deletion(-)
 tests:  7|1
total_score: 50/70
2f3cee2
Sat May  7 20:04:21 HSP 2022: 
 heap.c | 2 ++
 1 file changed, 2 insertions(+)
 tests:  7|1
total_score: 45/70
8514d50
Sat May  7 20:33:11 HSP 2022: 
 heap.c | 18 ++++++++++++++----
 1 file changed, 14 insertions(+), 4 deletions(-)
 tests:  7|1
total_score: 50/70
16525fa
Sat May  7 20:34:52 HSP 2022: 
 heap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  7|1
total_score: 45/70
a9cc2dc
Sat May  7 20:35:24 HSP 2022: 
 heap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  7|1
total_score: 50/70
a2d5cbc
Sat May  7 20:41:08 HSP 2022: 
 heap.c | 7 ++++---
 1 file changed, 4 insertions(+), 3 deletions(-)
 tests:  7|1
total_score: 45/70
cf0dd36
Sun May  8 09:50:58 HSP 2022: 
 heap.c | 40 ++--------------------------------------
 1 file changed, 2 insertions(+), 38 deletions(-)
 tests:  7|1
total_score: 45/70
56f0272
Sun May  8 10:27:21 HSP 2022: 
 heap.c | 65 +++++++++++++++++++++++++++++++++++++++++++++++++++++++++++------
 1 file changed, 59 insertions(+), 6 deletions(-)
 tests:  7|1
total_score: 45/70
61de7d8
Sun May  8 10:28:24 HSP 2022: 
 heap.c | 5 ++---
 1 file changed, 2 insertions(+), 3 deletions(-)
 tests:  7|1
total_score: 45/70
a30b7ab
Sun May  8 10:28:59 HSP 2022: 
 heap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  7|1
total_score: 45/70
733fc87
Sun May  8 10:32:16 HSP 2022: 
 heap.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  7|1
total_score: 45/70
ee850c2
Sun May  8 10:32:51 HSP 2022: 
 heap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  7|1
total_score: 50/70
a9d5342
Sun May  8 10:33:51 HSP 2022: 
 heap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  7|1
total_score: 50/70
45f9865
Sun May  8 10:35:01 HSP 2022: 
 heap.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  7|1
total_score: 45/70
67e3bcb
Sun May  8 10:35:22 HSP 2022: 
 heap.c | 1 -
 1 file changed, 1 deletion(-)
 tests:  7|1
total_score: 50/70
95355d9
Sun May  8 10:36:05 HSP 2022: 
 heap.c | 4 +---
 1 file changed, 1 insertion(+), 3 deletions(-)
 tests:  7|1
total_score: 50/70
fd84320
Sun May  8 10:41:53 HSP 2022: 
 heap.c | 2 ++
 1 file changed, 2 insertions(+)
 tests:  7|1
total_score: 50/70
0e12518
Sun May  8 10:43:01 HSP 2022: 
 heap.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
In file included from test.c:4:0:
heap.c: In function 'heap_pop':
heap.c:117:28: error: incompatible types when assigning to type 'heapElem {aka struct nodo}' from type 'void *'
    pq->heapArray[pq->size] = NULL;
                            ^
Compilation failed
71f1af2
Sun May  8 10:43:13 HSP 2022: 
 heap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  7|1
total_score: 50/70
ec6c2a3
Sun May  8 10:46:26 HSP 2022: 
 heap.c | 2 ++
 1 file changed, 2 insertions(+)
 tests:  7|1
total_score: 55/70
7c4f0a1
Sun May  8 10:47:28 HSP 2022: 
 heap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  7|1
total_score: 50/70
b0275d3
Sun May  8 10:47:50 HSP 2022: 
 heap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  7|1
total_score: 55/70
30f6299
